--- a/website/index.html
+++ b/website/index.html
@@ -38,12 +38,34 @@
           const form = document.getElementById("submission-form")
             form.addEventListener('submit', event => {
               if (!form.checkValidity()) {
-                event.preventDefault()
+                event.preventDefault();
+                event.stopPropagation();
+              } else {
+                query();
+                event.preventDefault();
               }
               form.classList.add('was-validated')
             }, false)
         })()
+    </script>
+    <script language="JavaScript">
+        function query() {
+            const API = "http://127.0.0.1:5000";
+            var request = new XMLHttpRequest();
+            request.open("POST", API, true);
+            request.setRequestHeader("Content-Type", "application/json");
+            request.onreadystatechange = function () {
+                console.log(request.responseText);
+            };
+            var selection = document.getElementById("selection");
 
+            var data = JSON.stringify({"priority": selection.options[selection.selectedIndex].text,
+                "title": document.getElementById("title").value,
+                "message": document.getElementById("body").value});
+            window.alert(data);
+
+            request.send(data);
+        }
     </script>
 </body>
 </html>
