--- a/website/index.html
+++ b/website/index.html
@@ -42,7 +42,6 @@
                 event.stopPropagation();
               } else {
                 query();
-                event.preventDefault();
               }
               form.classList.add('was-validated')
             }, false)
@@ -50,7 +49,7 @@
     </script>
     <script language="JavaScript">
         function query() {
-            const API = "http://127.0.0.1:5000";
+            const API = "http://127.0.0.1:5000/api/";
             var request = new XMLHttpRequest();
             request.open("POST", API, true);
             request.setRequestHeader("Content-Type", "application/json");
@@ -59,11 +58,9 @@
             };
             var selection = document.getElementById("selection");
 
-            var data = JSON.stringify({"priority": selection.options[selection.selectedIndex].text,
+            var data = JSON.stringify({"priority": selection.options[selection.selectedIndex].value,
                 "title": document.getElementById("title").value,
                 "message": document.getElementById("body").value});
-            window.alert(data);
-
             request.send(data);
         }
     </script>
