Fixed errors with cross origin

--- a/website/index.html
+++ b/website/index.html
@@ -42,6 +42,7 @@
                 event.stopPropagation();
               } else {
                 query();
+                event.preventDefault();
               }
               form.classList.add('was-validated')
             }, false)
