--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
                 <select class="form-select form-select-sm w-25" id="selection" required>
                     <option disabled selected value="">Select Priority</option>
                     <option value="low">Low</option>
-                    <option value="mid">Medium</option>
+                    <option value="medium">Medium</option>
                     <option value="high">High</option>
                 </select>
             </div>
@@ -62,6 +62,7 @@
             var data = JSON.stringify({"priority": selection.options[selection.selectedIndex].value,
                 "title": document.getElementById("title").value,
                 "message": document.getElementById("body").value});
+            console.log(document.getElementById("body").value)
             request.send(data);
         }
     </script>
