--- a/website/index.html
+++ b/website/index.html
@@ -26,7 +26,7 @@
               <label for="body" class="form-label">Message Body</label>
               <textarea class="form-control" id="body" rows="3" placeholder="Detailed message..."></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary">Submit</button>
         </div>
 
     </form>
@@ -42,6 +42,7 @@
                 event.stopPropagation();
               } else {
                 query();
+                event.preventDefault();
               }
               form.classList.add('was-validated')
             }, false)
